FFM-10286 Fix tests for last auth cache
FFM-10286 Fix tests for last auth cache

FFM-10286 Fix types for last auth cache

--- a/force-app/main/classes/FFAuthService.cls
+++ b/force-app/main/classes/FFAuthService.cls
@@ -1,5 +1,5 @@
 public interface FFAuthService {
     FFModels.AuthInfo authenticate(Boolean force);
-    FFModels.LastAuthTime getLastAuthTime();
+    String getLastAuthTime();
     
 } 
