--- a/force-app/test/FFAuthServiceCachedTest.cls
+++ b/force-app/test/FFAuthServiceCachedTest.cls
@@ -41,10 +41,10 @@ private class FFAuthServiceCachedTest {
        System.assertEquals(stored.get('jwt'), response.authToken);
 
        // Ensure lastAuthTime gets cached
-       String lastAuthKey = FFCacheKeys.getCacheKey('test-sdk-key'+FFClient.LAST_AUTH_TIME_KEY);
-       Map<String, String> storedLastAuth = (Map<String, String>)config.cache.getKey('lastAuth'+lastAuthKey);
+       String lastAuthKey = FFCacheKeys.getCacheKey('test-sdk-key');
+       String lastAuth = config.cache.getLastAuthKey('lastAuth'+lastAuthKey);
        // Just assert that the key is there. We can't verify the timestamp in the test.
-       System.assertNotEquals(storedLastAuth.get(FFClient.LAST_AUTH_TIME_KEY), null);
+       System.assertNotEquals(lastAuth, null);
     }
 
 
