FFM-10286 Retry on auth 500 errors
FFM-10286 Retry on auth 500 errors

--- a/force-app/main/classes/FFAuthServiceCached.cls
+++ b/force-app/main/classes/FFAuthServiceCached.cls
@@ -82,8 +82,7 @@ public class FFAuthServiceCached implements FFAuthService {
         } catch (FFBase.ApiException e) {
             System.debug('Auth Error');
             System.debug(e);
-            // TODO retry on more than just 403
-            if(e.getStatusCode() == 403) {
+            if(e.getStatusCode() == 403 || e.getStatusCode() == 500) {
                 if(retry < this.config.authRetries) {
                     System.debug('Retrying authentication, retry no. ' + retry);
                     return this.reauthenticate(retry + 1);
