--- a/force-app/main/classes/FFAuthService.cls
+++ b/force-app/main/classes/FFAuthService.cls
@@ -1,4 +1,4 @@
 public interface FFAuthService {
     FFModels.AuthInfo authenticate(Boolean force);
-    String getLastAuthTime();
+    Long getLastAuthTime();
 } 
