--- a/force-app/main/classes/FFCache.cls
+++ b/force-app/main/classes/FFCache.cls
@@ -3,12 +3,12 @@ public interface FFCache {
     void putFeatures(List<FFModelsFeatures.FeatureConfig> features, Integer ttl);
     void putSegments(List<FFModelsFeatures.TargetSegment> segments, Integer ttl);
     void putAuth(String key, Map<String, String> authData, Integer ttl);
-    void putLastAuthTimeWithoutTTL(String key, String lastAuthTime);
+    void putLastAuthTimeWithoutTTL(String key, Long lastAuthTime);
 
     List<FFModelsFeatures.FeatureConfig> getFeatures();
     List<FFModelsFeatures.TargetSegment> getSegments();
     Map<String, String> getKey(String key);
-    String getLastAuthKey(String key);
+    Long getLastAuthKey(String key);
 
     String getCacheNamespace();
 }
