FFM-10286 Fix incorrect ms param
FFM-10286 Fix incorrect ms param

--- a/force-app/main/classes/FFConfig.cls
+++ b/force-app/main/classes/FFConfig.cls
@@ -71,13 +71,13 @@ public class FFConfig {
             return this;
         }
 
-        public Builder evalExpireAfter(Integer ms) {
-            this.evalExpireAfter = ms;
+        public Builder evalExpireAfter(Integer seconds) {
+            this.evalExpireAfter = seconds;
             return this;
         }
 
-        public Builder authExpireAfter(Integer ms) {
-            this.authExpireAfter = ms;
+        public Builder authExpireAfter(Integer seconds) {
+            this.authExpireAfter = seconds;
             return this;
         }
 
