--- a/force-app/main/classes/FFAuthService.cls
+++ b/force-app/main/classes/FFAuthService.cls
@@ -1,4 +1,5 @@
 public interface FFAuthService {
     FFModels.AuthInfo authenticate(Boolean force);
     Long getLastAuthTime();
+    Boolean isAuthTokenPresent();
 } 
